# libapril

./: CMakeLists.txt
examples/: CMakeLists.txt  print_args.c  update_args.c  waitpid_deterministic.c  waitpid_nondeterministic.c
examples/data/: linked_list.c
include/april/: error.h  sio.h
include/april/data/: linked_list.h
include/april/sys/: io.h  process.h  signal.h
src/: error.c  sio.c
src/data/: linked_list.c
src/sys/: io.c  process.c  signal.c
